Fixing left-padding on header on mobile

--- a/web/app/themes/vestedworld/assets/styles/components/_header.scss
+++ b/web/app/themes/vestedworld/assets/styles/components/_header.scss
@@ -4,7 +4,7 @@
   z-index: 2000;
   @include clearfix;
   position: relative;
-  padding: 16px 0 16px 24px;
+  padding: 16px 0 16px $mobile-global-padding;
   height: 62px;
   background: $gray-lite;
 
